# gobv2

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  run.py
.stfolder/: syncthing-folder-8eae8d.txt
WORK-DOCS/: IDEAS.md  PROJECT_STATUS.md  ROADMAP.md  TODO.md
core/: README.md  __init__.py  communal_brain.db  interfaces.py  logging.py  utils.py
core/agents/: __init__.py  summarizer.py
core/brain/: __init__.py  brain.py  context_builder.py  conversation_manager.py  models.py  storage.py  vector_search.py
core/config/: __init__.py  loader.py  models.py
core/data/: communal_brain.db  last_context.txt
core/di/: __init__.py  container.py
core/llm/: __init__.py  config.py  llm_client.py
core/prompts/: __init__.py  manager.py
docs/: CENTRALBRAIN.md  FILE_GUIDE.md  QUICKSTART.md
docs/work-docs/: IDEAS.md  PROJECT_STATUS.md
frontend/: sampleui.html
main/: agent.py  requirements.txt  run_ui.py
main/instruments/: calculator.py  hello_world.py
max/: README.md  preload.py
mini/: .gitignore  README.md  config.toml  main.py  requirements.txt  run.sh
nano/: README.md  main.py
scripts/: pull.sh  push.sh  rename_to_main.sh
tests/: test_data_saving.py  test_full_system_integration.py  test_memory_sharing.py  test_mini_chatbot.py  test_mini_integration.py  test_nano_context.py  test_nano_context_file.py  test_nano_debug.py  test_nano_llm.py  test_nano_stats.py  test_persistent_context.py  test_phase1_validation.py  test_run.py  test_summarizer.py  test_universal_conversation.py
zero/: LICENSE  models.py  requirements.txt  run_ui.py
(+42 files in other folders)
